# OpenSquawk-LiveATC-api

./: .gitignore  LLM_HANDOFF_CHECKLIST.md  PLAN_REVIEW.md  README.md  REFINED_IMPLEMENTATION_PLAN.md  TRANSITION_MODEL_ANALYSIS.md  TRANSITION_PRIORITY_RECOMMENDATION.md  main.py  nixpacks.toml  pyproject.toml
app/: action_executor.py  airport_data.py  airport_geocode.py  auto_advance.py  config.py  decision_engine.py  flow_loader.py  flow_orchestrator.py  flow_validator.py  guard_evaluator.py  llm_router.py  models.py  readback_evaluator.py  session_store.py  taxi_route_service.py  taxi_routing.py  template_renderer.py  trigger_matcher.py
data/: airport_frequencies.min.csv  airport_names_de.json  airports.min.csv
docs/: 2026-07-18-telemetry-triggers-design.md  TELEMETRY-PLAN.md  flow-yaml-spec.md  taxi-route-reimplementation.md  taxi-sweep-report.md
flows/: clearance-v1.yaml  departure-v1.yaml  emergency-v1.yaml  icao_atc_decision_tree-v1.yaml  ifr-arrival-v1.yaml  ifr-enroute-arrival-v1.yaml  ifr-tower-landing-v1.yaml  info-arrival-v1.yaml  rto-v1.yaml  taxi-in-v1.yaml  taxi-v1.yaml  tower-v1.yaml  vfr-arrival-v1.yaml  vfr-circuit-landing-v1.yaml
opensquawk-liveatc-api/: State.py  StateMachine.py
plans/: 01_statemanager_and_states.md
tests/: conftest.py  test_airport_data.py  test_airport_geocode.py  test_auto_advance.py  test_decision_engine.py  test_flow_loader.py  test_flow_validator.py  test_models.py  test_readback_evaluator.py  test_taxi_route_service.py  test_taxi_routing.py  test_taxi_sweep_regressions.py  test_telemetry.py  test_tool_routes.py  (+1 more)
(+90 files in other folders)
