[tool.poetry]
name = "opensquawk-liveatc-api"
version = "0.1.0"
description = ""
authors = ["najajan <jan@najajan.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.129.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
